Fix build-all.bat: Use classpath for JNA dependencies